--- a/Allprojects/blogapp/templates/login.html
+++ b/Allprojects/blogapp/templates/login.html
@@ -19,5 +19,6 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
-    <p class="mt-3"><a href="{% url 'list' %}">Back to posts</a></p>
+    <p class="mt-3"><a href="{% url 'register' %}">Need an account? Register</a></p>
+    <p><a href="{% url 'list' %}">Back to posts</a></p>
 {% endblock %}
