--- a/Allprojects/blogapp/templates/base.html
+++ b/Allprojects/blogapp/templates/base.html
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="{% url 'create' %}">New Post</a>
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>\
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
                 {% endif %}
             </div>
