--- a/Allprojects/blogapp/templates/register.html
+++ b/Allprojects/blogapp/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 {% block title %}Register{% endblock %}
 {% block content %}
     <h1>Register</h1>
