Improved some UI and logic for blogapp

--- a/Allprojects/blogapp/templates/delete.html
+++ b/Allprojects/blogapp/templates/delete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} <!-- This line extends the base template for consistent layout -->
 {% block title %}Delete Post{% endblock %}
 {% block content %}
     <h1>Delete "{{ post.title }}"</h1>
