--- a/Allprojects/blogapp/templates/base.html
+++ b/Allprojects/blogapp/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Blog{% endblock %}</title>
-    <!-- Used Bootstrap for styling -->
+    <!-- Used Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
