--- a/Allprojects/blogapp/templates/login.html
+++ b/Allprojects/blogapp/templates/login.html
@@ -79,8 +79,8 @@
             </div>
             <button type="submit" class="btn btn-primary">Log in</button>
         </form>
-        <p class="mt-3 text-center"><a href="{% url 'register' %}" class="btn btn-secondary">or sign up</a></p>
-        <p class="mt-2 text-center"><a href="{% url 'list' %}" class="btn btn-secondary">Back to Blog</a></p>
+        <p class="mt-3 text-center"><a href="{% url 'register' %}" class="btn btn-secondary">Sign up</a></p>
+        <p class="mt-2 text-center"><a href="{% url 'list' %}" class="btn btn-secondary">Back to Home</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
