Changes to templates in profileapp

--- a/Allprojects/profileapp/templates/login.html
+++ b/Allprojects/profileapp/templates/login.html
@@ -13,7 +13,7 @@
         {{ form.as_p }}
         <button type="submit">Login</button>
     </form>
-    <p>Need an account? <a href="{% url 'userapp:register' %}">Register</a></p>
-    <p><a href="{% url 'userapp:password_reset' %}">Forgot Password?</a></p>
+    <p>Need an account? <a href="{% url 'profileapp:register' %}">Register</a></p>
+    <p><a href="{% url 'profileapp:password_reset' %}">Forgot Password?</a></p>
 </body>
 </html>
