--- a/Allprojects/profileapp/templates/profile.html
+++ b/Allprojects/profileapp/templates/profile.html
@@ -15,6 +15,6 @@
         {{ form.as_p }}
         <button type="submit">Save Changes</button>
     </form>
-    <a href="{% url 'userapp:logout' %}">Logout</a>
+    <a href="{% url 'profileapp:logout' %}">Logout</a>
 </body>
 </html>
