--- a/Allprojects/profileapp/templates/register.html
+++ b/Allprojects/profileapp/templates/register.html
@@ -13,6 +13,6 @@
         {{ form.as_p }}
         <button type="submit">Register</button>
     </form>
-    <p>Already have an account? <a href="{% url 'userapp:login' %}">Login</a></p>
+    <p>Already have an account? <a href="{% url 'profileapp:login' %}">Login</a></p>
 </body>
 </html>
