Implemented password reset functionalty in profileapp

--- a/Allprojects/profileapp/templates/profileapp/password_reset_request.html
+++ b/Allprojects/profileapp/templates/profileapp/password_reset_request.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head><title>Password Reset Confirm</title></head>
+<head><title>Password Reset Request</title></head>
 <body>
-    <h2>Reset Password</h2>
+    <h2>Request Password Reset</h2>
     {% if messages %}
         {% for message in messages %}
             <p>{{ message }}</p>
@@ -11,7 +11,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Reset Password</button>
+        <button type="submit">Send OTP</button>
     </form>
 </body>
 </html>
