--- a/Allprojects/profileapp/templates/profileapp/profile.html
+++ b/Allprojects/profileapp/templates/profileapp/profile.html
@@ -9,6 +9,7 @@
         {% endfor %}
     {% endif %}
     <p>Username: {{ user.username }}</p>
+    <p>Email: {{ user.email }}</p>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
